implementação automapper e mudança front end para material design

--- a/BlazorProject.Client/Pages/Mangas.razor
+++ b/BlazorProject.Client/Pages/Mangas.razor
@@ -1,5 +1,5 @@
 ﻿@page "/mangas"
-@using BlazorProject.Shared.Models
+@using BlazorProject.Shared.DTO
 @inject HttpClient Http
 
 <h1>Mangas List</h1>
@@ -10,23 +10,22 @@
 }
 else
 {
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Volumes</th>
-            </tr>
-        </thead>
-        <tbody>
+    <TableContainer>
+        <TableHeader>
+            <TableRow>
+                <TableHeaderCell>Title</TableHeaderCell>
+                <TableHeaderCell>Volumes</TableHeaderCell>
+            </TableRow>
+        </TableHeader>
+        
+        <TableBody>
             @foreach (var manga in mangas)
             {
-            <tr>
-                <td>@manga.Title</td>
-                <td>@manga.Volumes</td>
-            </tr>
+                <TableRow>@manga.Title</TableRow>
+                <TableRow>@manga.Volumes</TableRow>
             }
-        </tbody>
-    </table>
+        </TableBody>
+    </TableContainer>
 }
 
 @code {
