--- a/BlazorProject.Client/Pages/Counter.razor
+++ b/BlazorProject.Client/Pages/Counter.razor
@@ -4,6 +4,9 @@
 
 <p>Current count: @currentCount</p>
 
+<SimpleButton>
+    aab
+</SimpleButton>
 <button class="btn btn-primary" @onclick="@IncrementCount">Click me</button>
 
 @code {
