--- a/BlazorProject.Client/_Imports.razor
+++ b/BlazorProject.Client/_Imports.razor
@@ -5,4 +5,5 @@
 @using Microsoft.JSInterop
 @using BlazorProject.Client
 @using BlazorProject.Client.Shared
-@using Blazorise
+@using Blazor.Realm
+@using Redux
