--- a/BlazorProject.Client/wwwroot/css/site.css
+++ b/BlazorProject.Client/wwwroot/css/site.css
@@ -5,7 +5,7 @@ html, body {
     /*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
 }
 
-.fire-type {
+.pokemon-type {
     color:white;
     display: inline-block;
     width: 75px;
